--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
 
+body {
+    line-height: 2;
+}
+
 .container {
     /* font-size: 150% */
 }
+
 
 #timer {
     position: absolute;
@@ -48,7 +53,9 @@ nav {
 @keyframes marked-wrong {
     100% { opacity: .1 }
 }
-
+br {
+    margin-bottom: .5rem;
+}
 
 .form-control {
     /* margin: .5rem; */
@@ -59,7 +66,7 @@ nav {
 
 .custom-control-label::before,
 .custom-control-label::after {
-    top: .335rem;
+    /* top: .335rem; */
     width: 1.5rem;
     height: 1.5rem;
 }
