--- a/css/main.css
+++ b/css/main.css
@@ -4,26 +4,71 @@ body {
 }
 
 .container {
-    /* font-size: 150% */
+    color: #333a40;
 }
 
+#challenge,
+#exams,
+#splash {
+    position: absolute;
+    top: 0;
+    bottom: 3rem;
+    height: calc(100% - 3rem);
+    background: #fff;
+    overflow: scroll;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+#exams {
+    background-size: 50%;
+}
+#splash {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#splash img {
+    width: 50%;
+    animation: blurFadeInOut 3s ease-in;
+    opacity: 0;
+}
+
+@keyframes blurFadeInOut{
+	0%{
+		opacity: 0;
+		transform: scale(1);
+	}
+    10% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+	100%{
+        opacity: 0;
+	}
+}
+
+.opts-header {
+    margin: 1rem 0 0;
+    font-weight: bold;
+}
 
 #timer {
     position: absolute;
-    bottom: 20%;
     width: 100%;
-    height: 5%;
+    bottom: 3.5rem;
     text-align: center;
-    color: #888;
-    font-size: 1rem;
+    z-index: 1;
 }
-nav {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 20%;
-    text-align: center;
+.timer-content {
+    display: inline-block;
+    background: #eee;
+    color: #a48b66;
+    /* font-size: 1rem; */
+    padding: .25rem .5rem .125rem;
+    border-radius: .25rem;
 }
+
 #loader {
     position: absolute;
     bottom: 0%;
@@ -31,13 +76,6 @@ nav {
     height: 8%;
     text-align: center;
 }
-
-/* labels */
-.custom-control-label {
-    margin-left: .5rem;
-    opacity: .8;
-}
-/* highlight correct answers */
 
 .custom-control-label.marked-correct {
     opacity: 1;
@@ -61,52 +99,34 @@ nav {
     line-height: 1.5;
 }
 
-.form-control {
-    /* margin: .5rem; */
-}
-.vam {
-    vertical-align: middle;
-}
-
-.custom-control-label::before,
-.custom-control-label::after {
-    /* top: .335rem; */
-    width: 1.5rem;
-    height: 1.5rem;
-}
-#prev,
-#next {
-    width: 11ch;
-    margin: .5rem;
-}
-#prev {
-    /* float: left; */
-
-}
-#next {
-    /* float: right; */
-}
 div.visible {
     display: block;
 }
+#splash.hidden,
 div.hidden {
     display: none;
 }
 
 .btn.visible {
-    /* transition-property: opacity;
-    transition-timing-function: ease; */
     opacity: 1;
     transition: all 1s ease-out;
 }
 .btn.hidden {
     opacity: 0;
 }
-
+.button,
+.button.enabled {
+    opacity: 1;
+}
+.button.disabled {
+    opacity: .1;
+}
 
 .progresso {
-    /* width: 100%; */
-    /* height: 16px; */
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 .progresso > span {
     display: inline-block;
@@ -128,8 +148,8 @@ div.hidden {
 }
 
 .result {
-    height: 45%;
-    background-size: 45% auto;
+    height: 48%;
+    background-size: 72% auto;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -154,11 +174,18 @@ div.hidden {
     background: url(../img/trianglify.png) 50% 50% no-repeat;
     /* text-align: center; */
     position: absolute;
+    /* top: 0; */
+    /* bottom: 0; */
     width: 100%;
-    height: 100%;
+    height: calc(100% - 30px);
+    overflow: overlay;
     transform: translateY(-100%);
     transition: .5s ease-in transform;
-    z-index: 1;
+    z-index: 10;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    /* margin-bottom: 3rem; */
+    overflow: scroll;
 }
 .options {
     padding: 1rem;
@@ -175,27 +202,70 @@ div.hidden {
 }
 #options-tgr:checked + .menu-options {
     transform: translateY(0);
-    /* animation: menu-options; */
 }
-/*@keyframes menu-options {
-    80% { transform: translateY(0); }
-    900% { transform: translateY(10%); }
-    100% { transform: translateY(0); }
-}*/
 
 #retrieve-code {
     width: 40%;
 }
 
-#show-options {
-    width: 8ch;
+
+.main-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 3rem;
+    background: url(../img/trianglify.png) 50% 50% no-repeat;
+    border-top: #222;
     position: fixed;
     bottom: 0;
-    left: calc(50% - 4ch);
+    /* width: 100%; */
+    padding: 0 .25rem;
+    z-index: 100;
 }
-#close-options {
-    width: 16ch;
-    position: absolute;
-    bottom: 0;
-    left: calc(50% - 8ch);
+.main-nav.hidden {
+    display: none;
 }
+.main-nav .button {
+    display: flex;
+    min-width: 2.5rem;
+    height: 2.5rem;
+    padding: .25rem;
+    margin: 0;
+    background-color: #a48b66;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    border-radius: .25rem;
+}
+.nav-main .button:hover {
+    background-color: #c6383a;
+}
+.main-nav span {
+    display: none;
+}
+
+.main-nav .menu {
+    background-image: url('../img/IcoMoon-Free-master/SVG/190-menu.svg');
+}
+.main-nav .prev {
+    background-image: url('../img/IcoMoon-Free-master/SVG/321-arrow-left2.svg');
+}
+.main-nav .next {
+    background-image: url('../img/IcoMoon-Free-master/SVG/317-arrow-right2.svg');
+}
+.main-nav .start {
+    background-image: url('../img/IcoMoon-Free-master/SVG/285-play3.svg');
+}
+.main-nav .stop {
+    background-image: url('../img/IcoMoon-Free-master/SVG/287-stop2.svg');
+}
+.main-nav .print {
+    background-image: url('../img/IcoMoon-Free-master/SVG/085-printer.svg');
+}
+.main-nav .answers {
+    background-image: url('../img/IcoMoon-Free-master/SVG/066-lifebuoy.svg');
+    background-image: url('../img/IcoMoon-Free-master/SVG/066-lifebuoy.svg');
+}
+
+
+
