--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,15 @@
 body {
     line-height: 1.75;
     line-height: 1.5;
+
+
+    font-family: 'Lato', sans-serif;
+
+    /* font-family: 'Open Sans', sans-serif; */
+
+    /* font-family: 'Roboto', sans-serif; */
+
+
 }
 
 .container {
