--- a/css/main.css
+++ b/css/main.css
@@ -31,8 +31,10 @@ body {
 }
 #splash,
 ._result {
-    /* position: absolute; */
-    /* top: 0; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     /* bottom: 3rem; */
     height: calc(100% - 3rem);
     background: #fff;
