--- a/css/main.css
+++ b/css/main.css
@@ -385,6 +385,9 @@ div.hidden {
 .image-icon {
     background-image: url('../img/IcoMoon-Free-master/SVG/014-image.svg');
 }
+.database-icon {
+    background-image: url('../img/IcoMoon-Free-master/SVG/101-database.svg');
+}
 
 
 a {
