--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ div.hidden {
 .button.disabled {
     opacity: .1;
 }
-
+/*
 .progresso {
     position: absolute;
     top: 0;
@@ -235,21 +235,17 @@ div.hidden {
 .progresso > span {
     display: inline-block;
     height: 16px;
-    /* background-image:
-         linear-gradient(-45deg, 
-                                 transparent 33%, rgba(0, 0, 0, .1) 33%, 
-                                 rgba(0,0, 0, .1) 66%, transparent 66%),
-         linear-gradient(to top, 
-                                 rgba(255, 255, 255, .25), 
-                                 rgba(0, 0, 0, .25)),
-         linear-gradient(to left, #09c, #f44); */
-    
     background-size: 35px 20px, 100% 100%, 100% 100%;
     animation: animate-stripes 5s linear infinite;
 }
  
 @keyframes animate-stripes {
     100% { background-position: 0px 0px; }
+}*/
+
+.progress {
+    background-color: transparent;
+    border-radius: 0;
 }
 
 .result {
@@ -384,6 +380,46 @@ div.hidden {
 }
 .main-nav .answers {
     background-image: url('../img/IcoMoon-Free-master/SVG/066-lifebuoy.svg');
+}
+
+.feedback {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background: #000; */
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    /* display: flex; */
+
+}
+.feedback-icon {
+    margin-top: 1.45rem;
+    width: 4rem;
+    height: 4rem;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 50%;
+    border-radius: .25rem;
+}
+.feedback.good .feedback-icon {
+    
+    /* display: none; */
+    /* width: 100%; */
+    /* height: 100%; */
+    background-color: var(--green);
+    background-image: url('../img/IcoMoon-Free-master/SVG/224-happy.svg');
+    /* background-size: 50%; */
+}
+.feedback.bad .feedback-icon {
+    /* display: none; */
+    /* width: 100%;
+    height: 100%; */
+    background-color: var(--red);
+    background-image: url('../img/IcoMoon-Free-master/SVG/230-sad.svg');
+    /* background-size: 50%; */
 }
 
 .icon {
