--- a/css/main.css
+++ b/css/main.css
@@ -545,5 +545,69 @@ a:hover {
     /* padding: .3em .5em .2em; */
 }
 .advanced {
-    margin-top: 1rem;
+    padding-top: 1rem;
 }
+
+.badge {
+    padding: .25em .4em .15em;
+}
+.questions-filtering {
+    margin: 1rem;
+    width: 100%;
+}
+
+.versions-and-tags {
+    height: 1rem;
+}
+
+.version-pill,
+.tag-pill {
+    font-size: 75%;
+    border-radius: .25rem;
+    /* padding: .25rem .25rem .25rem 0; */
+    padding: 1px 0;
+    display: inline-block;
+    max-width: 30vw;
+}
+.version-pill em,
+.tag-pill em {
+    /* background: var(--teal); */
+    padding: .25rem;
+    background-color: #fff;
+    /* border-radius: .25rem; */
+    /* vertical-align: middle; */
+    border-radius: 0 .2rem .2rem 0;
+}
+.version-pill {
+    border: 1px solid var(--teal);
+    background-color: var(--teal);
+}
+.tag-pill {
+    border: 1px solid var(--pink);
+    background-color: var(--pink);
+}
+
+.version-pill::before {
+    /* border: 1px solid var(--teal); */
+}
+.tag-pill::before {
+    /* background-color: var(--pink); */
+}
+.version-pill::before,
+.tag-pill::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    margin: 0 .25rem;
+    vertical-align: middle;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+}
+.version-pill::before {
+    background-image: url('../img/IcoMoon-Free-master/SVG/047-stack.svg');
+}
+.tag-pill::before {
+    background-image: url('../img/IcoMoon-Free-master/SVG/054-price-tag.svg');
+}
+
