--- a/css/main.css
+++ b/css/main.css
@@ -456,7 +456,8 @@ div.hidden {
 .delete-icon {
     background-image: url('../img/IcoMoon-Free-master/SVG/173-bin.svg');
     opacity: .2;
-    width: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     /* float: right; */
     flex-grow: 0;
 }
@@ -467,7 +468,8 @@ div.hidden {
 .download-icon {
     background-image: url('../img/IcoMoon-Free-master/SVG/195-cloud-download.svg');
     opacity: .2;
-    width: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
     /* float: right; */
     flex-grow: 0;
 }
@@ -500,19 +502,40 @@ div.hidden {
 
 .exam-description {
     flex-grow: 50;
+
 }
 
 .relative {
     position: relative;
 }
-.timestamp {
+
+.exam-compability {
+    position: absolute;
+    font-size: 1rem;
+    bottom: 0;
+    /* left: 0%; */
+    right: 0;
+    width: 50%;
+    /* display: block; */
+    text-align: right;
+    line-height: 1;
+    color: #ccc;
+    /* background: #eee; */
+}
+.exam-compability span {
+    font-size: .75rem;
+    color: #ddd;
+}
+
+.exam-timestamp {
     text-align: center;
     color: #ddd;
     position: absolute;
     bottom: -.8rem;
-    right: -1rem;
+    right: 0;
     font-size: 10px;
 }
+
 
 .alert p:only-child {
     margin: 0;
